test/TestPhases/typechecker/invalid/PrevParam.blc
module PrevParam

param p: int64 = 7
activity main ()()
    var x: int64
    x = prev p
    await false
end
